--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <!DOCTYPE html>
 <html>
-  
+  <head>
+    <title>Graded Excercise</title>
+    <body>
+      <div>
+        <h1>My Favorite Sports</h1>
+        <hr>
+      </div>
+    </body>
+  </head>
+</html>
