--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <div>
         <h1>My Favorite Sports</h1>
         <hr>
+        <img src="https://static.thenounproject.com/png/499189-200.png" alt="bodybuilding">
       </div>
     </body>
 </html>
