--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>My Favorite Sports</h1>
         <hr>
         <a>
-        <img src="https://static.thenounproject.com/png/499189-200.png" alt="bodybuilding">
+        <img src="https://static.thenounproject.com/png/499189-200.png" alt="bodybuilding" width="100" height="100">
         </a>
       </div>
     </body>
