--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <hr>
         <a>
         <img src="https://static.thenounproject.com/png/499189-200.png" alt="bodybuilding" style="width=100;height=100">
+          <img src="https://static.vecteezy.com/system/resources/previews/001/196/883/original/basketball-png.png" alt"basketball"
+               style="width=100;height=100">
         </a>
       </div>
     </body>
