--- a/jerky.html
+++ b/jerky.html
@@ -32,19 +32,19 @@
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 8:10 AM - 9:00 AM</th>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #9966FF">HRA</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Biology</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Biology</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Biology</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #0fb88b">Biology</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #0fb88b">Biology</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #0fb88b">Biology</td>
             <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Health</td>
 		     	</tr>
 		
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 9:05 AM - 9:55 AM</th>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Physics</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Physics</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #33FFFF">Physics</td>
-            <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Math</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Math</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #087cc4">Physics</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #087cc4">Physics</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #087cc4">Physics</td>
+            <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #b3ffba">Math</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #b3ffba">Math</td>
 		      </tr>
 		
 					<tr>
@@ -58,13 +58,13 @@
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Chemistry</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #33FFFF">Chemistry</td>
             <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Social Science</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Social Science</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #e87c61">Social Science</td>
 		      </tr>
 		
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 11:20 AM - 12:10 PM</th>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">English</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Social Science</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #e87c61">Social Science</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #33FFFF">Statistics</td>
             <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">English</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Filipino</td>
