--- a/jerky.html
+++ b/jerky.html
@@ -4,7 +4,7 @@
 		<title> Grade 9 - Sodium Class Schedule </title>
 	</head>
 	<body>
-		<table style="border: 3px solid black; border-collapse; collapse">
+		<table style="border: 3px solid black; border-collapse: collapse">
 			<caption> Grade 9 - Sodium Class Schedule </caption>
 				<tbody>
 					<tr>
