--- a/jerky.html
+++ b/jerky.html
@@ -96,14 +96,14 @@
 						<th style ="border: 1px solid black; padding: 10px"> 2:50 PM - 3:40 PM</th>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66"> Health</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66" colspan="2">Consultation Period</td>
-                                                <td style ="border: 1px solid black; padding: 10px" rowspan="2"> Consultation Period </td>
+                                                <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66" rowspan="2"> Consultation Period </td>
 					</tr>
 					
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 3:45 PM - 4:35 PM</th>
-						<td style ="border: 1px solid black; padding: 10px; text-allign:center; background-color: #99CC66">Consultation Period</td>
-						<td style ="border: 1px solid black; padding: 10px; text-allign:center; background-color: #999933">ALA</td>
-						<td style ="border: 1px solid black; padding: 10px; text-allign:center; background-color: #999933">ALA</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66">Consultation Period</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #999933">ALA</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #999933">ALA</td>
 					</tr>
 						
 			</tbody>
