--- a/jerky.html
+++ b/jerky.html
@@ -78,8 +78,8 @@
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 1:00 PM - 1:50 PM</th>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #328540">Statistics</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #CC6699">Filipino</td>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #33FFFF">Filipino</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #42A30D">Filipino</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #42A30D">Filipino</td>
             					<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #D5F5E3">Statistics</td>
                                                 <td style ="border: 1px solid black; padding: 10px" rowspan="4"></td>
 					</tr>
@@ -94,7 +94,7 @@
 					
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 2:50 PM - 3:40 PM</th>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66"> Health</td>
+						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #40285E"> Health</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66" colspan="2">Consultation Period</td>
                                                 <td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66" rowspan="2"> Consultation Period </td>
 					</tr>
