--- a/jerky.html
+++ b/jerky.html
@@ -101,7 +101,7 @@
 					
 					<tr>
 						<th style ="border: 1px solid black; padding: 10px"> 3:45 PM - 4:35 PM</th>
-						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #99CC66">Consultation Period</td>
+						<td style ="border: 1px solid black; padding: 10px; </td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #999933">ALA</td>
 						<td style ="border: 1px solid black; padding: 10px; text-align:center; background-color: #999933">ALA</td>
 					</tr>
