--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Graded Excercise</title>
-  </head>
-    <body>
-      <div>
-        <h1>My Favorite Sports</h1>
-        <hr>
-        <a>
-        <img src="https://static.thenounproject.com/png/499189-200.png" alt="bodybuilding" style="width=100;height=100">
-          <img src="https://static.vecteezy.com/system/resources/previews/001/196/883/original/basketball-png.png" alt"basketball"
-               style="width=100;height=100">
-        </a>
-      </div>
-    </body>
+	<head>
+<title>Graded Excercise</title>
+	</head>
+<body>
+<div>
+	<h1>My Favorite Sports</h1>
+<hr>
+<a href="/Gales_9SODIUM_CS/files/page1.html">
+<img src="/Gales_9SODIUM_CS/images/sports.jpg" alt="bodybuilding icon" style="width:100px;height:100px;">
+</a>
+<a href="/Gales_9SODIUM_CS/files/page2.html">
+<img src="/Gales_9SODIUM_CS/images/106-1063799_basketball-black-volleyball-logo-png-transparent-png.png" alt="basketball icon" style="width:100px;height:100px;">
+</a>
+<a href="/Gales_9SODIUM_CS/files/page3.html">
+<img src="/Gales_9SODIUM_CS/images/d1e7ab0dbc0e22f04dc79778ca5ded68.jpg	" alt="badminton icon" style="width:100px;height:100px;">
+</a>
+<p>
+Click on the icons to know more about each sport!
+</p>
+</body>
 </html>
