--- a/Gales_9SODIUM_CS/home.html
+++ b/Gales_9SODIUM_CS/home.html
@@ -7,8 +7,8 @@
 <div>
 	<h1>My Favorite Sports</h1>
 <hr>
-<a href="/Gales_9SODIUM_CS/files/page1.html">
-<img src="/Gales_9SODIUM_CS/images/sports.jpg" alt="bodybuilding icon" style="width:100px;height:100px;">
+<a href="/files/page1.html">
+<img src="/images/sports.jpg" alt="bodybuilding icon" style="width:100px;height:100px;">
 </a>
 <a href="/Gales_9SODIUM_CS/files/page2.html">
 <img src="/Gales_9SODIUM_CS/images/106-1063799_basketball-black-volleyball-logo-png-transparent-png.png" alt="basketball icon" style="width:100px;height:100px;">
