--- a/GalesCS3_Sodium/Laboratory_Excercise/mod2-3_Gales/mod2-3_Gales_2.html
+++ b/GalesCS3_Sodium/Laboratory_Excercise/mod2-3_Gales/mod2-3_Gales_2.html
@@ -8,7 +8,7 @@
 <h1> My Favorite TV Series </h1>
 <span>
 	<h3>Breaking Bad</h3>
-<img src="/GalesCS3_Sodium/Laboratory_Excercise/mod2-3_Gales/images/thumb1.png" width="900" height="500" />
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.themoviedb.org%2Ftv%2F1396-breaking-bad&psig=AOvVaw14NzlzeM63AKt_hUZ3CO-M&ust=1666185724563000&source=images&cd=vfe&ved=0CAkQjRxqFwoTCOjUwdPv6foCFQAAAAAdAAAAABAI" width="900" height="500" />
 <p>Set in Albuquerque, New Mexico, between 2008 and 2010, Breaking Bad follows Walter White, a modest high school chemistry teacher who transforms into a ruthless kingpin in the local methamphetamine drug trade, driven to financially provide for his family after being diagnosed with inoperable lung cancer.</p>
 </div>
 </body>
