--- a/GalesCS3_Sodium/bago_dos.html
+++ b/GalesCS3_Sodium/bago_dos.html
@@ -25,7 +25,7 @@
 		<div>
 			<ul><li>Best Practices in Design and Layout </li></ul>
 			<UL style= list style:circle;>
-			<ul><li style=color:blue;><a href="Laboratory Excercise/mod3-2_Gales.html">Laboratory Excercise 5</a></ul></li>
+			<ul><li style=color:blue;><a href="Laboratory_Excercise/mod3-2_Gales.html">Laboratory Excercise 5</a></ul></li>
 		</div>
 
 			<p style= padding-top:30px;>Copyright © Gales 2022</p>
