--- a/GalesCS3_Sodium/bago_dos.html
+++ b/GalesCS3_Sodium/bago_dos.html
@@ -12,14 +12,14 @@
 		<div>
 			<ul><li>Basic HTML</li></ul>
 			<UL style= list style:circle;>
-			<ul ><li style=color:blue;><a href="Laboratory Excercise/mod2-1_Gales.html">Laboratory Excercise 1</a></ul></li>
-			<ul ><li style=color:blue;><a href="Laboratory Excercise/mod2-2_Gales.html">Laboratory Excercise 2</a></ul></li>
-			<ul ><li style=color:blue;><a href="Laboratory Excercise/mod2-3_Gales/mod2-3_Gales_1.html">Laboratory Excercise 3</a></ul></li>
+			<ul ><li style=color:blue;><a href="Laboratory_Excercise/mod2-1_Gales.html">Laboratory Excercise 1</a></ul></li>
+			<ul ><li style=color:blue;><a href="Laboratory_Excercise/mod2-2_Gales.html">Laboratory Excercise 2</a></ul></li>
+			<ul ><li style=color:blue;><a href="Laboratory_Excercise/mod2-3_Gales/mod2-3_Gales_1.html">Laboratory Excercise 3</a></ul></li>
 		</div>
 		<div>
 			<ul><li>HTML Tables</li></ul>
 			<UL style= list style:circle;>
-			<ul><li style=color:blue;><a href="Laboratory Excercise/mod3-1_Gales.html">Laboratory Excercise 4</a></ul></li>
+			<ul><li style=color:blue;><a href="Laboratory_Excercise/mod3-1_Gales.html">Laboratory Excercise 4</a></ul></li>
 		</div>
 
 		<div>
