--- a/Gales_9SODIUM_CS/home.html
+++ b/Gales_9SODIUM_CS/home.html
@@ -2,6 +2,11 @@
 <html>
 	<head>
 <title>Graded Excercise</title>
+<meta charset="UTF-8"> 
+		<meta name="Gales" content="My Favourite Sports"> 
+		<meta name="FA_1" content="HTML"> 
+		<meta name="Fa_1" content="10-25-2022"> 
+		<link rel="icon" href="icon.png" type="image/gif">
 	</head>
 <body>
 <div>
