--- a/FA6_Gales/Untitled-1.html
+++ b/FA6_Gales/Untitled-1.html
@@ -22,7 +22,7 @@
 
         .link1:visited {
             color: white;
-            background-color: orange;
+            background-color: orangered;
         }
 
         .link1:focus {
@@ -51,7 +51,7 @@
 
         .link2:visited {
             color: white;
-            background-color: orange;
+            background-color: orangered;
         }
 
         .link2:focus {
